--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>task.bigquery</groupId>
     <artifactId>datasetmanager</artifactId>
     <packaging>pom</packaging>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
     <modules>
         <module>client</module>
         <module>table-creator</module>
