--- a/table-creator/pom.xml
+++ b/table-creator/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>datasetmanager</artifactId>
         <groupId>task.bigquery</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -15,7 +15,7 @@
         <dependency>
             <groupId>task.bigquery</groupId>
             <artifactId>client</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>1.0</version>
         </dependency>
     </dependencies>
 
